Fonts not showing issue fixed, minor button hover changes

--- a/tearn/client/stylesheets/base/_fonts.scss
+++ b/tearn/client/stylesheets/base/_fonts.scss
@@ -7,5 +7,5 @@
 $font-stack: "Circular Std", "Source Sans Pro", "Helvetica", sans-serif;
 
 html, body, h1, h2, h3, h4, h5, h6, a, p, button, input, form, footer {
-  font-family: $font-stack;
+  font-family: $font-stack !important;
 }
