--- a/tearn/client/stylesheets/state/_Navbar.scss
+++ b/tearn/client/stylesheets/state/_Navbar.scss
@@ -1,6 +1,21 @@
 .navbar-default .navbar-nav > li > a.active,
 .navbar-default .navbar-nav > li > a.active:focus,
 .navbar-default .navbar-nav > li > a.active:hover {
-  color: #555;
-  background-color: #e7e7e7;
+  color: $primary-color;
+  background-color: #efefef;
+}
+
+.navbar {
+  background-color: #fafafa;
+  border-bottom: 1px solid #efefef;
+}
+
+.profile-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: complement($primary-color);
+  display: inline-block;
+  position: relative;
+  right: 170px;
 }
